<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_1"
    tools:context="com.pfe.general.quickattendance.RegisterActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewBack"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_below="@+id/ins"
        android:layout_marginStart="190dp"
        android:layout_marginTop="90dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#ce7539"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/back"
                android:textColor="#013c8e"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <EditText
        android:id="@+id/LastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/FirstName"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/FirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="99dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/email"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/LastName"
        android:ems="10"
        android:hint="@string/email_use_this_as_a_username"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/cin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/password2"
        android:ems="10"
        android:hint="@string/cin_number"
        android:inputType="number" />

    <EditText
        android:id="@+id/ins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cin"
        android:ems="10"
        android:hint="@string/ins_number"
        android:inputType="number" />

    <android.support.v7.widget.CardView
        android:layout_height="50dp"
        android:layout_width="160dp"
        android:layout_below="@+id/ins"
        android:layout_marginStart="15dp"
        android:layout_marginTop="90dp"
        app:cardBackgroundColor="#ce7539"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/cardViewRegister" android:focusable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/register1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="#013c8e"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/register" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Spinner
        android:id="@+id/department"
        android:layout_width="190dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ins"
        android:layout_marginTop="22dp"
        android:spinnerMode="dialog"/>

    <Spinner
        android:id="@+id/Class"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignBottom="@+id/department"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/department"
        android:spinnerMode="dialog"/>

</RelativeLayout>
